[package]
name = "bevy_quadtree"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", features = [
    "dynamic_linking", # Remove for release build
] }
rand = "0.8.5"

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in debug mode for dependencies.
[profile.dev.package."*"]
opt-level = 3
