[package]
name = "bevy_quadtree"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
    "dynamic_linking", # Remove for release build
    "bevy_winit",
    "bevy_color",
    "bevy_sprite",
    "bevy_gizmos",
] }
rand = "0.8.5"

# Enable a small amount of optimization in debug mode.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in debug mode for dependencies.
[profile.dev.package."*"]
opt-level = 3
